[package]
name = "blockfrost"
version = "1.2.3"
edition = "2021"
keywords = ["blockfrost", "blockchain", "cardano", "ipfs", "nft"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
description = "A Rust SDK for Blockfrost.io API"
license = "Apache-2.0"
repository = "https://github.com/blockfrost/blockfrost-rust"
homepage = "https://blockfrost.io"

[dependencies]
blockfrost-openapi = { version = "0.1.87", default-features = false }
futures = "0.3.31"
futures-timer = "3.0.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "http2",
    "charset",
    "multipart",
    "json",
    "system-proxy",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
thiserror = "2.0.17"

[dev-dependencies]
httpmock = "0.8.2"
rstest = "0.26.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls", "blockfrost-openapi/rustls"]
native-tls = ["reqwest/native-tls", "blockfrost-openapi/native-tls"]
rustls = ["reqwest/rustls"]

# deprecated features: use rustls instead, remove those features while bumping major versions.
rustls-tls = ["rustls"]
rustls-tls-manual-roots = ["rustls"]
rustls-tls-webpki-roots = ["rustls"]
rustls-tls-native-roots = ["rustls"]

[lints.clippy]
uninlined_format_args = "deny"
